<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/redblue"
    android:orientation="vertical"
    tools:context=".StartGame">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/cbtnbr"
        android:orientation="horizontal"
        android:layout_height="50dp">

        <ImageView
            android:layout_width="0dp"
            android:contentDescription="@string/back"
            android:src="@drawable/back"
            android:id="@+id/back"
            android:layout_weight="0.1"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.9"
            android:textColor="@color/bg"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/startgame"
            android:layout_height="match_parent" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/glassview"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:id="@+id/code"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/copy_code"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="40dp"
            android:background="@drawable/cbtnbr"
            android:text="@string/copy"
            android:textColor="@color/bg"
            android:drawableEnd="@drawable/copy"
            android:layout_margin="5dp"
            />

        <Button
            android:id="@+id/share_code"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="40dp"
            android:text="@string/share"
            android:textColor="@color/bg"
            android:background="@drawable/cbtnbr"
            android:drawableEnd="@drawable/share"
            android:layout_margin="5dp"
            />
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_weight="0.7"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:text="@string/fix_rounds" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:textStyle="bold"
                android:layout_height="35dp"
                android:layout_margin="2dp"
                android:text="@string/minus"
                android:textSize="20sp"
                android:background="@drawable/rounded_button"
                android:textColor="@color/white"
                android:id="@+id/decrementbtn" />

            <TextView
                android:id="@+id/roundsvalue"
                android:layout_width="0dp"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_weight="0.1"
                android:layout_height="wrap_content" />

            <Button
                android:background="@drawable/rounded_button"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_margin="2dp"
                android:layout_weight="0.1"
                android:layout_height="35dp"
                android:text="@string/plus"
                android:id="@+id/incrementbtn" />
        </LinearLayout>

    <Button
        android:id="@+id/play_game"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/cbtnrb"
        android:text="@string/play_game"
        android:textStyle="bold"
        android:textColor="@color/bg"
        android:textSize="16sp"
        android:layout_margin="5dp"
        /></LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@android:color/black"
        android:textStyle="italic"
        android:text="@string/players_joined" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/list_players"
        android:background="@drawable/glassview"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"/>

</LinearLayout>
