<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/policethiefbg"
    android:layout_height="match_parent"
    tools:context=".FirstActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:background="@drawable/glassview"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.9"
            android:id="@+id/playerName"
            android:drawableEnd="@drawable/edit"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_width="0dp"
            android:id="@+id/sound"
            android:layout_weight="0.1"
            android:layout_margin="5dp"
            android:src="@drawable/soundon"
            android:contentDescription="@string/soundon"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:id="@+id/start_game"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:text="@string/startgame"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@drawable/cbtnrb"
            android:textSize="16sp"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/join_game"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@drawable/cbtnrb"
            android:text="@string/joingame"
            android:textSize="16sp"
            />
        </LinearLayout>
        <Button
            android:id="@+id/leaderboard"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@drawable/cbtnrb"
            android:text="@string/leaders_board"
            android:textSize="16sp"
            />
    </LinearLayout>
</LinearLayout>