<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/redblue"
    android:layout_height="wrap_content"
    tools:context=".Winner">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/cgame"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/cbtnbr"
        android:text="@string/police_thief"
        android:textStyle="bold"
        android:drawableStart="@drawable/back"
        android:textColor="@color/white"
        android:textSize="16sp"
        />

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/wname"
            android:background="@drawable/glassview"
            android:gravity="center"
            android:drawableStart="@drawable/grade"
            android:drawableEnd="@drawable/happy"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/yelow"
            android:layout_height="40dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/cbtnbr"
        android:layout_height="40dp">

        <TextView
            android:layout_width="0dp"
            android:text="@string/player"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_weight="0.7"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/score"
            android:layout_height="match_parent" />
    </LinearLayout>

        <TableLayout
            android:id="@+id/tablelayout"
            android:background="@drawable/glassview"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TableLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:lottie_rawRes="@raw/animation"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

</LinearLayout>

</ScrollView>