<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fragment.Play"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:background="@drawable/glassview"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.85"
                android:layout_margin="5dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:id="@+id/status1"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.15"
                android:layout_margin="5dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/distributetimer"
                android:layout_height="wrap_content"/>

        </LinearLayout>

         <ImageView
             android:layout_width="match_parent"
             android:src="@drawable/chits2"
             android:layout_height="75dp"
             android:contentDescription="@string/chits" />

        <Button
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/custombutton"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/distribute_chits"
            android:id="@+id/distributebutton"
            android:enabled="false"
            android:layout_height="30dp"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:background="@drawable/glassview"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="0.9"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:id="@+id/hide"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/show" />

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.1"
            android:id="@+id/expansion"
            android:layout_margin="5dp"
            android:src="@drawable/expandown"
            android:contentDescription="@string/expansionpanel"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <com.github.aakira.expandablelayout.ExpandableLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/content"
        app:ael_expanded="true"
        app:ael_orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="180dp">
            <ImageView
                android:layout_width="match_parent"
                android:id="@+id/policeimg"
                android:src="@drawable/police"
                android:layout_height="160dp"
                android:contentDescription="@string/chit" />

            <TextView
                android:id="@+id/police"
                android:layout_width="match_parent"
                android:layout_margin="2dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_height="20dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="180dp">
        <ImageView
            android:layout_width="match_parent"
            android:id="@+id/thiefimg"
            android:src="@drawable/thief"
            android:layout_height="160dp"
            android:contentDescription="@string/chit" />

        <TextView
            android:id="@+id/thief"
            android:layout_width="match_parent"
            android:layout_margin="2dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_height="20dp"/>
        </LinearLayout>
    </LinearLayout>
    </com.github.aakira.expandablelayout.ExpandableLinearLayout></LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="wrap_content"
        android:scrollbars="horizontal"
        android:layout_margin="5dp"
        android:background="@drawable/glassview"
        android:visibility="gone"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/lvtext"
        android:visibility="gone"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="0dp"
        android:layout_weight="0.85"
        android:layout_margin="5dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:id="@+id/status2"
        android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.15"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/findtimer"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>
</ScrollView>
    <ListView
        android:layout_width="match_parent"
        android:id="@+id/listview"
        android:visibility="gone"
        android:background="@drawable/glassview"
        android:layout_margin="5dp"
        android:layout_height="wrap_content" />
</LinearLayout>